# rinha-2024-q1

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  docker-compose.yml  nginx.conf  script.sql
src/: main.rs  repository.rs
