[package]
name = "rinha-2024-q1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
time = { version = "0.3.34", features = ["formatting", "macros", "serde", "parsing"] }
tokio = { version = "1.37.0", features = ["full"] }
